--- a/PSAsync.Analyzer.Tests/PSAsync.Analyzer.Tests.csproj
+++ b/PSAsync.Analyzer.Tests/PSAsync.Analyzer.Tests.csproj
@@ -2,8 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
+    <IsPackable>false</IsPackable>
     <RestoreAdditionalProjectSources>
       https://dotnet.myget.org/F/roslyn-analyzers/api/v3/index.json;
       $(RestoreAdditionalProjectSources)
