--- a/src/PSAsync.Samples/PSAsync.Samples.csproj
+++ b/src/PSAsync.Samples/PSAsync.Samples.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PSAsync.Analyzer\PSAsync.Analyzer.csproj" />
     <ProjectReference Include="..\PSAsync\PSAsync.csproj" />
   </ItemGroup>
 
