--- a/src/PSAsync.Tests/PSAsync.Tests.csproj
+++ b/src/PSAsync.Tests/PSAsync.Tests.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PSAsync\PSAsync.csproj" />
+  </ItemGroup>
+
 </Project>
