net5.0 ディレクトリを分ける

--- a/.editorconfig
+++ b/.editorconfig
@@ -16,7 +16,7 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{xml,csproj,targets,props}]
+[*.{xml,csproj,targets,props,config}]
 charset = utf-8
 end_of_line = crlf
 indent_size = 2
