--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "*.csproj": "xml",
     "*.targets": "xml",
-    "*.props": "xml"
+    "*.props": "xml",
+    "*.config": "xml"
   }
 }
