--- a/src/net5.0/PSAsync/PSAsync.csproj
+++ b/src/net5.0/PSAsync/PSAsync.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
     <DebugType>embedded</DebugType>
     <DebugSymbols>true</DebugSymbols>
@@ -18,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="$(ProjectSourceDirectory)\**\*.cs"/>
     <Compile Include="$(CommonSourceDirectory)\*.cs" />
   </ItemGroup>
 
