fix parent file name

--- a/src/PSAsync.Analyzer/PSAsync.Analyzer.csproj
+++ b/src/PSAsync.Analyzer/PSAsync.Analyzer.csproj
@@ -18,8 +18,9 @@
     <Compile Update="Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>Resource.resx</DependentUpon>
+      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+
     <EmbeddedResource Update="Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
