--- a/src/net5.0/PSAsync.Samples/PSAsync.Samples.csproj
+++ b/src/net5.0/PSAsync.Samples/PSAsync.Samples.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
+    <DebugType>embedded</DebugType>
+    <DebugSymbols>true</DebugSymbols>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
