--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -16,6 +16,7 @@
   <PropertyGroup>
     <EnableSourceLink Condition="'$(EnableSourceLink)' != 'true'">false</EnableSourceLink>
     <DeterministicSourcePaths Condition="'$(EnableSourceLink)' != 'true'">false</DeterministicSourcePaths>
+    <RestoreLockedMode>$(ContinuousIntegrationBuild)</RestoreLockedMode>
   </PropertyGroup>
 
   <PropertyGroup>
