--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -20,7 +20,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
+    - name: Install dependencies
+      run: dotnet restore /p:ContinuousIntegrationBuild=true src/PSAsync.sln
     - name: Build
-      run: dotnet build --configuration Release /p:ContinuousIntegrationBuild=true src/PSAsync.sln
+      run: dotnet build --configuration Release --no-restore /p:ContinuousIntegrationBuild=true src/PSAsync.sln
     - name: Test
       run: dotnet test --configuration Release --no-restore --no-build src/PSAsync.sln
