いろいろ遊んでる

--- a/.editorconfig
+++ b/.editorconfig
@@ -24,6 +24,14 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.yml]
+charset = utf-8
+end_of_line = crlf
+indent_size = 2
+indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = true
+
 [*.cs]
 dotnet_diagnostic.CA1062.severity = error
 dotnet_code_quality.null_check_validation_method = M:PSAsync.Requires.ArgumentNotNull``1(``0,System.String)
