このへん、環境によって valid な書き方が違うのだろうか？

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -29,4 +29,4 @@ jobs:
     - name: Configure nuget
       run: sed "s/{GITHUB_TOKEN}/${{ secrets.GITHB_TOKEN }}/" .github/workflows/nuget.config > src/nuget.config
     - name: Publish
-      run: dotnet nuget push --source github --api-key ${{ secrets.GITHUB_TOKEN }} --force-english-output src/builtPackages/*.nupkg
+      run: dotnet nuget push --source https://nuget.pkg.github.com/aetos382/index.json --api-key ${{ secrets.GITHUB_TOKEN }} --force-english-output src/builtPackages/*.nupkg
