--- a/src/net5.0/PSAsync.Analyzer.Tests/PSAsync.Analyzer.Tests.csproj
+++ b/src/net5.0/PSAsync.Analyzer.Tests/PSAsync.Analyzer.Tests.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
     <PackageReference Include="coverlet.collector" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" />
+    <PackageReference Include="Microsoft.VisualStudio.Validation" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing.XUnit" Version="1.0.1-beta1.*" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeFix.Testing.XUnit" Version="1.0.1-beta1.*" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeRefactoring.Testing.XUnit" Version="1.0.1-beta1.*" />
@@ -23,7 +25,6 @@
 
   <ItemGroup>
     <Compile Include="$(ProjectSourceDirectory)\**\*.cs"/>
-    <Compile Include="$(CommonSourceDirectory)\*.cs" />
   </ItemGroup>
 
 </Project>
