--- a/.editorconfig
+++ b/.editorconfig
@@ -34,4 +34,4 @@ trim_trailing_whitespace = true
 
 [*.cs]
 dotnet_diagnostic.CA1062.severity = error
-dotnet_code_quality.null_check_validation_method = M:PSAsync.Requires.ArgumentNotNull``1(``0,System.String)
+dotnet_code_quality.null_check_validation_method = M:Microsoft.Requires.NotNull``1(``0,System.String)
