--- a/src/net5.0/PSAsync.Tests/PSAsync.Tests.csproj
+++ b/src/net5.0/PSAsync.Tests/PSAsync.Tests.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="xunit.runner.visualstudio" />
     <PackageReference Include="coverlet.collector" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" />
+    <PackageReference Include="Microsoft.VisualStudio.Validation" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,7 +23,6 @@
 
   <ItemGroup>
     <Compile Include="$(ProjectSourceDirectory)\**\*.cs"/>
-    <Compile Include="$(CommonSourceDirectory)\*.cs" />
   </ItemGroup>
 
 </Project>
