--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -9,6 +9,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Update="Microsoft.VisualStudio.Validation" Version="15.5.31" />
+    <PackageReference Update="Microsoft.VisualStudio.Threading" Version="16.6.13" />
     <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.6.1" />
     <PackageReference Update="xunit" Version="2.4.1" />
     <PackageReference Update="xunit.runner.visualstudio" Version="2.4.2">
