--- a/src/PSAsync.Analyzer.Tests/PSAsync.Analyzer.Tests.csproj
+++ b/src/PSAsync.Analyzer.Tests/PSAsync.Analyzer.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.PowerShell.SDK" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
@@ -20,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PSAsync.Analyzer\PSAsync.Analyzer.csproj" />
+    <ProjectReference Include="..\PSAsync\PSAsync.csproj" />
   </ItemGroup>
 
 </Project>
