--- a/src/PSAsync.Samples/PSAsync.Samples.csproj
+++ b/src/PSAsync.Samples/PSAsync.Samples.csproj
@@ -13,15 +13,8 @@
     <PackageReference Include="Microsoft.PowerShell.SDK" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" />
     <PackageReference Include="Microsoft.VisualStudio.Validation" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
-    <PackageReference Include="System.Reactive" Version="4.4.1">
-      <PrivaeAssets>all</PrivaeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.DiagnosticAdapter" Version="3.1.5">
-      <PrivaeAssets>all</PrivaeAssets>
-    </PackageReference>
+    <PackageReference Include="System.Reactive" Version="4.4.1" />
+    <PackageReference Include="Microsoft.Extensions.DiagnosticAdapter" Version="3.1.5" />
   </ItemGroup>
 
   <ItemGroup>
