--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -15,14 +15,12 @@
 
   <PropertyGroup>
     <SolutionDirectory>$(MSBuildThisFileDirectory)</SolutionDirectory>
+    <RepositoryRootDirectory>$(MSBuildThisFileDirectory)..</RepositoryRootDirectory>
 
     <!-- https://github.com/NuGet/Home/issues/7921#issuecomment-478152479 -->
     <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
 
-    <RepositoryRootDirectory>$(MSBuildThisFileDirectory)..</RepositoryRootDirectory>
-    <CommonSourceDirectory>$(MSBuildThisFileDirectory)\Common</CommonSourceDirectory>
-    <EnableSourceLink Condition="'$(EnableSourceLink)' != 'true'">false</EnableSourceLink>
-    <DeterministicSourcePaths Condition="'$(EnableSourceLink)' != 'true'">false</DeterministicSourcePaths>
+    <DeterministicSourcePaths>false</DeterministicSourcePaths>
     <ErrorLog Condition="'$(ErrorLog)' == ''">$(MSBuildProjectName).sarif</ErrorLog>
 
     <PackageOutputPath Condition="'$(PackageOutputPath)' == ''">$(SolutionDirectory)\builtPackages</PackageOutputPath>
