--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -6,25 +6,32 @@ on:
   pull_request:
     branches: [ master ]
 
-env:
-  DOTNET_CLI_TELEMETRY_OPTOUT: 1
-  SOLUTION_FILE: src/PSAsync.sln
-  SOLUTION_BUILD_CONFIGURATION: CI
-
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
+
+    env:
+      DOTNET_CLI_TELEMETRY_OPTOUT: 1
+      SOLUTION_FILE: PSAsync.sln
+      SOLUTION_BUILD_CONFIGURATION: CI
+    
+    defaults:
+      run:
+        working-directory: src
 
     steps:
-    - uses: actions/checkout@v2
+    - name: checkout
+      uses: actions/checkout@v2
+
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.101
+
     - name: Install dependencies
       run: dotnet restore --locked-mode ${SOLUTION_FILE}
+
     - name: Build
       run: dotnet build --configuration ${SOLUTION_BUILD_CONFIGURATION} --no-restore /p:ContinuousIntegrationBuild=true ${SOLUTION_FILE}
+
     - name: Test
       run: dotnet test --configuration ${SOLUTION_BUILD_CONFIGURATION} --no-restore --no-build ${SOLUTION_FILE}
