--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -6,15 +6,14 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  DOTNET_CLI_TELEMETRY_OPTOUT: 1
+  SOLUTION_BUILD_CONFIGURATION: CI
+
 jobs:
   build:
 
     runs-on: windows-latest
-
-    env:
-      DOTNET_CLI_TELEMETRY_OPTOUT: 1
-      SOLUTION_FILE: PSAsync.sln
-      SOLUTION_BUILD_CONFIGURATION: CI
     
     defaults:
       run:
@@ -28,10 +27,10 @@ jobs:
       uses: actions/setup-dotnet@v1
 
     - name: Install dependencies
-      run: dotnet restore --locked-mode ${SOLUTION_FILE}
+      run: dotnet restore --locked-mode
 
     - name: Build
-      run: dotnet build --configuration ${SOLUTION_BUILD_CONFIGURATION} --no-restore /p:ContinuousIntegrationBuild=true ${SOLUTION_FILE}
+      run: dotnet build --configuration ${SOLUTION_BUILD_CONFIGURATION} --no-restore /p:ContinuousIntegrationBuild=true
 
     - name: Test
-      run: dotnet test --configuration ${SOLUTION_BUILD_CONFIGURATION} --no-restore --no-build ${SOLUTION_FILE}
+      run: dotnet test --configuration ${SOLUTION_BUILD_CONFIGURATION} --no-restore --no-build
