--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -30,7 +30,7 @@ jobs:
       run: dotnet restore --locked-mode
 
     - name: Build
-      run: dotnet build --configuration ${SOLUTION_BUILD_CONFIGURATION} --no-restore /p:ContinuousIntegrationBuild=true
+      run: dotnet build --configuration %SOLUTION_BUILD_CONFIGURATION% --no-restore /p:ContinuousIntegrationBuild=true
 
     - name: Test
-      run: dotnet test --configuration ${SOLUTION_BUILD_CONFIGURATION} --no-restore --no-build
+      run: dotnet test --configuration %SOLUTION_BUILD_CONFIGURATION% --no-restore --no-build
