--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -20,6 +20,9 @@ jobs:
         working-directory: src
 
     steps:
+    - name: check shell
+      run: $PSVersionTable
+
     - name: checkout
       uses: actions/checkout@v2
 
@@ -30,7 +33,7 @@ jobs:
       run: dotnet restore --locked-mode
 
     - name: Build
-      run: dotnet build --configuration %SOLUTION_BUILD_CONFIGURATION% --no-restore /p:ContinuousIntegrationBuild=true
+      run: dotnet build --configuration ${env:SOLUTION_BUILD_CONFIGURATION} --no-restore /p:ContinuousIntegrationBuild=true
 
     - name: Test
-      run: dotnet test --configuration %SOLUTION_BUILD_CONFIGURATION% --no-restore --no-build
+      run: dotnet test --configuration ${env:SOLUTION_BUILD_CONFIGURATION} --no-restore --no-build
