--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -43,9 +43,16 @@ jobs:
       env:
         cache-prefix: nuget-http-caches-
       with:
-        path:
-          - ${{ env.LOCALAPPDATA }}/NuGet/v3-cache
-          - ${{ env.USERPROFILE }}/.nuget/packages
+        path: ${{ env.LOCALAPPDATA }}/NuGet/v3-cache
+        key: ${{ env.cache-prefix }}${{ hashFiles('**/packages.lock.json') }}
+        restore-keys: ${{ env.cache-prefix }}
+
+    - name: cache nuget packages
+      uses: actions/cache@v2
+      env:
+        cache-prefix: nuget-http-caches-
+      with:
+        path: ${{ env.USERPROFILE }}/.nuget/packages
         key: ${{ env.cache-prefix }}${{ hashFiles('**/packages.lock.json') }}
         restore-keys: ${{ env.cache-prefix }}
 
