--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: test
       shell: cmd
-      run: -|
+      run: |
         echo LOCALAPPDATA = %LOCALAPPDATA%
         echo LOCALAPPDATA = ${{ env.LOCALAPPDATA }}
         echo TEST = %TEST%
